# dbus-cplusplus

./: .gitignore  meson.build  meson_options.txt
examples/: meson.build
examples/echo/: echo-client.cpp  meson.build
examples/echo_ecore/: meson.build
examples/ecore/: meson.build
examples/glib/: dbus-browser.cpp  dbus-browser.h  meson.build
examples/properties/: meson.build
include/: meson.build
include/dbus-c++/: connection.h  debug.h  dispatcher.h  error.h  eventloop-integration.h  eventloop.h  interface.h  message.h  object.h  pendingcall.h  server.h  types.h  util.h
src/: connection.cpp  connection_p.h  debug.cpp  dispatcher.cpp  error.cpp  eventloop-integration.cpp  eventloop.cpp  internalerror.h  meson.build  message.cpp  message_p.h  object.cpp  pendingcall_p.h  pipe.cpp  server.cpp  server_p.h
src/integration/ecore/: meson.build
src/integration/glib/: meson.build
test/generator/: meson.build
tools/: generate_adaptor.cpp  generate_adaptor.h  generate_proxy.cpp  generate_proxy.h  generator_utils.cpp  generator_utils.h  introspect.cpp  meson.build  xml.cpp  xml.h  xml2cpp.cpp
